--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Toxic-Bot",
+    "name": "MEGALODON-Bot",
     "version": "8.0.0",
     "description": "WhatsApp War Bot Using Nodejs",
     "main": "index.js",
